--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   http: ^0.13.5
   flutter_widget_from_html: ^0.8.5
   carousel_slider: ^4.1.1
+  onesignal_flutter: ^3.5.0
 
 dev_dependencies:
   flutter_test:
